MODSCHED-48 Upgrade module to SpringBoot 4.0 and Spring 7.0 (#214)